refactor: Review 반영